feat: enterprise performance suite (FastMath LUT, Long2Object zero-box maps, thread-local IO, BFS Redstone, in-engine benchmark)